# personal-assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.fly  README.md  com.polynumeral.assistant.plist  com.polynumeral.llama-server.plist  deploy.sh  docker-compose.yml  fly.toml  llama-server.sh  local.sh  nanobot-config.json  pyproject.toml  start.sh
.beads/: metadata.json
credential-proxy/: Caddyfile  Dockerfile  README.md  fly.toml  gmail-imap-proxy.py  start-proxy.sh
docs/: backlog.md  credential-proxy-options.md
docs/plans/: 2026-02-17-personal-agent-design.md  2026-02-18-guardrails-first-design.md  2026-02-18-guardrails-first-implementation.md  2026-03-07-credential-proxy-design.md  2026-03-07-email-unsubscribe-design.md  2026-03-07-three-app-deployment-design.md  2026-03-08-gmail-oauth2-token-proxy-design.md
docs/specs/: 2026-03-26-scratchpad-design.md
log-service/: Dockerfile  fly.toml  main.py  start.sh
personal_agent/: main.py  nanobot_hooks.py  scratchpad.py  zulip_channel.py
personal_agent/brave/: tools.py
personal_agent/email/: __init__.py  fastmail.py  gmail.py  provider.py  state.py  (+2 more)
tests/: test_action_review.py  test_auto_continue.py  test_brave_tools.py  test_email_provider.py  test_email_state.py  test_email_tools.py  test_encrypt_secret.py  test_fastmail.py  test_gmail.py  test_gmail_imap_proxy.py  test_kagi_tools.py  test_log_service.py  test_nanobot_hooks.py  test_promptguard.py  test_scratchpad.py  test_unsubscribe.py  test_zulip_channel.py
tokenizer/: Dockerfile  encrypt_secret.py
workspace/: AGENTS.md
(+15 files in other folders)
