[project]
name = "personal-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "nanobot-ai==0.1.4",
    "httpx>=0.27",
    "pynacl>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_agent"]

[tool.hatch.build.targets.editable]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
